[tool.poetry]
name = "lazyflow"
version = "0.1.0"
description = ""
authors = ["Benjamin Trom <btrom@adscientiam.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
